@@ -93,10 +93,12 @@ void ERR_GOST_error(int function, int reason, char *file, int line);
 #define GOST_F_PKEY_GOST01CP_DECRYPT			 118
 #define GOST_F_PKEY_GOST01CP_ENCRYPT			 119
 #define GOST_F_PKEY_GOST01CP_KEYGEN			 120
+#define GOST_F_PKEY_GOST01_PARAMGEN			 138
 #define GOST_F_PKEY_GOST2001_DERIVE			 121
 #define GOST_F_PKEY_GOST94CP_DECRYPT			 122
 #define GOST_F_PKEY_GOST94CP_ENCRYPT			 123
 #define GOST_F_PKEY_GOST94CP_KEYGEN			 124
+#define GOST_F_PKEY_GOST94_PARAMGEN			 139
 #define GOST_F_PKEY_GOST_CTRL				 125
 #define GOST_F_PKEY_GOST_CTRL01_STR			 126
 #define GOST_F_PKEY_GOST_CTRL94_STR			 127
